@@ -7,6 +7,7 @@
     fixed bugs
     added HiGHS solver
     added pysmps dependency for mps parsing
+    deprecated 'indexs' parameter LpVariable dicts and matrix
 2.5.1 2021-09-28
     updated docs
     fixed minor issues
